kubernetes/apps/flux-system/github/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    gatus.io/status-code: "404"
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.ktwo.io
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
